--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Synthesis3",
   "scripts": {
-    "dev": "harp server --port $PORT",
+    "dev": "harp server -i 0.0.0.0 --port $PORT",
     "start": "NODE_ENV=production harp server --port $PORT",
     "sass": "node-sass --include-path scss scss/main.scss css/main.css"
   },
